--- a/index.html
+++ b/index.html
@@ -20,18 +20,35 @@
         body {
             transition: background-color 0.3s ease, color 0.3s ease;
         }
+        /* Loading state fallback */
+        #root:empty::before {
+            content: "Initializing DeFi Pro Environment...";
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            color: #6366f1;
+            font-weight: 600;
+        }
     </style>
-<script type="importmap">
+    <script>
+        // Shim for process.env to prevent ReferenceErrors in raw browser ESM
+        window.process = { env: { API_KEY: "" } };
+    </script>
+    <script type="importmap">
 {
   "imports": {
+    "react-dom/client": "https://esm.sh/react-dom@19.2.4/client",
+    "react-dom": "https://esm.sh/react-dom@19.2.4",
+    "react": "https://esm.sh/react@19.2.4",
+    "@google/genai": "https://esm.sh/@google/genai@1.41.0",
+    "recharts": "https://esm.sh/recharts@3.7.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4",
-    "@google/genai": "https://esm.sh/@google/genai@^1.41.0",
-    "recharts": "https://esm.sh/recharts@^3.7.0"
+    "react/": "https://esm.sh/react@^19.2.4/"
   }
 }
 </script>
+    <script type="module" src="./index.tsx"></script>
 </head>
 <body class="bg-slate-50 text-slate-900 transition-colors duration-300">
     <div id="root"></div>
